--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "ng serve --proxy-config proxy.conf.json",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
@@ -11,7 +11,7 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~11.2.13",
+    "@angular/animations": "^11.2.14",
     "@angular/common": "~11.2.13",
     "@angular/compiler": "~11.2.13",
     "@angular/core": "~11.2.13",
@@ -19,7 +19,12 @@
     "@angular/platform-browser": "~11.2.13",
     "@angular/platform-browser-dynamic": "~11.2.13",
     "@angular/router": "~11.2.13",
+    "bootstrap": "^5.0.0",
+    "jquery": "^3.6.0",
+    "ng-uikit-pro-standard": "^1.0.0",
+    "ngx-toastr": "^14.0.0",
     "rxjs": "~6.6.0",
+    "sweetalert2": "^11.0.7",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3"
   },
@@ -27,6 +32,7 @@
     "@angular-devkit/build-angular": "~0.1102.12",
     "@angular/cli": "~11.2.12",
     "@angular/compiler-cli": "~11.2.13",
+    "@fortawesome/fontawesome-free": "^5.15.3",
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
