--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/router": "~11.2.13",
     "bootstrap": "^5.0.0",
     "jquery": "^3.6.0",
+    "jwt-decode": "^3.1.2",
     "ng-uikit-pro-standard": "^1.0.0",
     "ngx-toastr": "^14.0.0",
     "rxjs": "~6.6.0",
