--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "jquery": "^3.6.0",
     "jwt-decode": "^3.1.2",
     "ng-uikit-pro-standard": "^1.0.0",
+    "ngx-image-cropper": "^3.3.5",
     "ngx-toastr": "^14.0.0",
     "rxjs": "~6.6.0",
     "sweetalert2": "^11.0.7",
